--- a/U3/css/estilo4.css
+++ b/U3/css/estilo4.css
@@ -1,4 +1,4 @@
-
+    
 body{
     background-color: #091057;
 }
@@ -18,6 +18,15 @@ div .boton {
     background-color: #EC8305;
     transform: scale(1.05);
     transition: transform 0.3s ease;
+}
+
+#horario {
+    padding: 1em;
+    border-radius: 10px;
+    color: aliceblue;
+    font-size: 1.2em;
+    margin-top: 1em;
+    white-space: pre-wrap; /* Permite saltos de línea */
 }
 
 a{
